trying to fix horizontal overflow

--- a/public/css/mainchat.css
+++ b/public/css/mainchat.css
@@ -124,6 +124,7 @@ html,body {
 .messageTextArea {
     font-family: 'Montserrat', sans-serif;
     color:aliceblue;
+    max-width: inherit;
     overflow-wrap: break-word;
 }
 
